--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Watches4Cash</title>
+  <title>Cash4Watches</title>
 </head>
 
 <body>
